Fixing import for node 18

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ NODE_ENV=production
 SERVER_LISTEN_PORT=3000
 SERVER_LISTEN_HOST=0.0.0.0
 
-DB_MONGO_CONNECTION="mongodb+srv://user:password@host/database"
+DB_MONGO_CONNECTION="mongodb://cart:cart@cart-backend_db/cart"
