--- a/package.json
+++ b/package.json
@@ -1,38 +1,23 @@
 {
-  "name": "precios-rotos",
+  "name": "cart",
   "version": "1.0.0",
-  "description": "Broken prices scrapper and verifier",
-  "main": "build/index.js",
-  "typing": "index.d.ts",
+  "description": "Cart example",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon src/index.ts --",
-    "build": "tsc",
-    "start": "tsc && node build/index.js"
+    "start": "node app.js"
   },
   "author": "Nicolas Sorice",
   "license": "ISC",
   "dependencies": {
-    "@types/yargs": "^16.0.0",
-    "axios": "^0.21.1",
-    "body-parser": "^1.19.0",
-    "dotenv": "^7.0.0",
-    "exif": "^0.6.0",
-    "express": "^4.17.0",
-    "i": "^0.3.6",
-    "moment": "^2.24.0",
-    "mongodb": "^3.6.4",
-    "npm": "^6.12.0",
-    "puppeteer": "^8.0.0",
-    "redis": "^2.8.0",
-    "yargs": "^16.2.0"
-  },
-  "devDependencies": {
-    "@types/express": "4.17.6",
-    "@types/node": "14.14.0",
-    "@types/mongodb": "3.6.4",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.2",
-    "nodemon": "^2.0.7"
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.8.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
